--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
             <img src="tu_logo.png" alt="Logo de tu empresa">
         </div>
-        <nav>
+        <nav class="nav-menu">
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#nosotros">Nosotros</a></li>
@@ -21,6 +21,11 @@
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
+        <div class="mobile-menu-icon">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
     </header>
 
     <main>
@@ -52,6 +57,17 @@
             </div>
         </section>
     </main>
+    <div class="mobile-menu">
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#nosotros">Nosotros</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+            <button class="close-menu">Cerrar</button>
+        </nav>
+    </div>
     <script type="module" src="main.js"></script>
     <script src="script.js"></script>
 </body>
